prevent powered-by-mangopay.png from overflowing

--- a/style/base/utils.scss
+++ b/style/base/utils.scss
@@ -1,4 +1,8 @@
 
+.contain {
+    max-width: 100%;
+}
+
 .inline-block {
     display: inline-block;
 }
